# PortfolioApp

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  Config.h.example  StockAPI.cpp  StockAPI.h  StockData.h
src/ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
